feat: update project name and enhance SEO with meta tags, sitemap, and robots.txt

--- a/index.html
+++ b/index.html
@@ -2,11 +2,69 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>temp-app</title>
+
+    <!-- Primary Meta Tags -->
+    <title>2 Colors 2 Shapes - Daily Art Challenge</title>
+    <meta name="title" content="2 Colors 2 Shapes - Daily Art Challenge" />
+    <meta name="description" content="A daily creative challenge where you make art using just 2 colors and 2 shapes. New constraints every day. Save, share, and vote on submissions." />
+    <meta name="keywords" content="daily art challenge, creative constraints, shape art, color challenge, digital art, minimalist art, daily creativity" />
+    <meta name="author" content="2 Colors 2 Shapes" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://2colors2shapes.art/" />
+    <meta property="og:title" content="2 Colors 2 Shapes - Daily Art Challenge" />
+    <meta property="og:description" content="A daily creative challenge where you make art using just 2 colors and 2 shapes. New constraints every day." />
+    <meta property="og:image" content="https://2colors2shapes.art/og-image.png" />
+    <meta property="og:site_name" content="2 Colors 2 Shapes" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://2colors2shapes.art/" />
+    <meta name="twitter:title" content="2 Colors 2 Shapes - Daily Art Challenge" />
+    <meta name="twitter:description" content="A daily creative challenge where you make art using just 2 colors and 2 shapes. New constraints every day." />
+    <meta name="twitter:image" content="https://2colors2shapes.art/og-image.png" />
+
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta name="theme-color" content="#18181b" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://2colors2shapes.art/" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "2 Colors 2 Shapes",
+      "url": "https://2colors2shapes.art",
+      "description": "A daily creative challenge where you make art using just 2 colors and 2 shapes. New constraints every day. Save, share, and vote on submissions.",
+      "applicationCategory": "DesignApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "2 Colors 2 Shapes"
+      }
+    }
+    </script>
   </head>
   <body>
+    <noscript>
+      <div style="font-family: system-ui, sans-serif; max-width: 600px; margin: 50px auto; padding: 20px; text-align: center;">
+        <h1>2 Colors 2 Shapes</h1>
+        <p>A daily creative challenge where you make art using just 2 colors and 2 shapes.</p>
+        <p>Every day brings new color and shape constraints. Create something unique, save your work, and vote on other submissions.</p>
+        <p><strong>Please enable JavaScript to use this application.</strong></p>
+      </div>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
