update domain references and assets for 2colors2shapes.com; add logo and og-image

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://2colors2shapes.art/" />
+    <meta property="og:url" content="https://2colors2shapes.com/" />
     <meta property="og:title" content="2 Colors 2 Shapes - Daily Art Challenge" />
     <meta property="og:description" content="A daily creative challenge where you make art using just 2 colors and 2 shapes. New constraints every day." />
-    <meta property="og:image" content="https://2colors2shapes.art/og-image.png" />
+    <meta property="og:image" content="https://2colors2shapes.com/og-image.png" />
     <meta property="og:site_name" content="2 Colors 2 Shapes" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://2colors2shapes.art/" />
+    <meta name="twitter:url" content="https://2colors2shapes.com/" />
     <meta name="twitter:title" content="2 Colors 2 Shapes - Daily Art Challenge" />
     <meta name="twitter:description" content="A daily creative challenge where you make art using just 2 colors and 2 shapes. New constraints every day." />
-    <meta name="twitter:image" content="https://2colors2shapes.art/og-image.png" />
+    <meta name="twitter:image" content="https://2colors2shapes.com/og-image.png" />
 
     <!-- Favicon and App Icons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -32,7 +32,7 @@
     <meta name="theme-color" content="#18181b" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://2colors2shapes.art/" />
+    <link rel="canonical" href="https://2colors2shapes.com/" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -40,7 +40,7 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "2 Colors 2 Shapes",
-      "url": "https://2colors2shapes.art",
+      "url": "https://2colors2shapes.com",
       "description": "A daily creative challenge where you make art using just 2 colors and 2 shapes. New constraints every day. Save, share, and vote on submissions.",
       "applicationCategory": "DesignApplication",
       "operatingSystem": "Any",
